# ttb-label-verification

./: .env.example  README.md  pyproject.toml  railway.toml
backend/app/: api.py  batch.py  comparison.py  config.py  errors.py  image_processing.py  main.py  models.py  openai_client.py  routes.py  validation.py  vision.py  vision_errors.py
frontend/: app.js  index.html  results.js
scripts/: live_smoke.py  measure_single_label_latency.py  run_vision_sample.py
tests/: test_comparison.py  test_frontend_static.py  test_health.py  test_verify_batch_endpoint.py  test_verify_endpoint.py  test_vision.py
